# parameter-golf

./: STRATEGY.md  sweep.py
data/: train_sp_tokenizer.py
records/track_10min_16mb/2026-03-18_HaverAI_DepthRecurrence/: README.md  submission.json  train_gpt.py
research/: distillation-analysis.md  modded-nanogpt-techniques.md
rust-tools/: Cargo.toml  custom_tokenizer.json  custom_tokenizer_2048.json  custom_tokenizer_4096.json  fineweb_sample.txt
rust-tools/src/: quantize.rs  train_tokenizer.rs
sweep_logs/: sweep_all_20260318_200244.json  sweep_arch_20260318_200237.json  sweep_arch_20260318_200305.json
