[package]
name = "pgolf-tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "train-tokenizer"
path = "src/train_tokenizer.rs"

[[bin]]
name = "quantize"
path = "src/quantize.rs"

[dependencies]
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rand = "0.9"
flate2 = "1.1"
